# autoware.privately-owned-vehicles

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  CPPLINT.cfg  README.md
.github/: build-visionpilot-container.yaml
.github/workflows/: build-visionpilot-container.yaml  semantic-pull-request.yaml  spell-check-daily.yaml  spell-check-differential.yaml
AutoSpeed/: README.md
AutoSpeed/NuImages/: README.md  create_bbox_json.py  test_Visualization.py
AutoSpeed/OpenLane/: README.md
Control/Steering/PurePursuit/: CMakeLists.txt
Control/Steering/PurePursuit/include/: pure_pursuit.hpp
Control/Steering/PurePursuit/src/: main.cpp  pure_pursuit.cpp
EgoLanes/: README.md
EgoLanes/create_lanes/: README.md
Models/: README.md  requirements.txt
Models/config/: EgoLanesLite.yaml  Scene3DLite.yaml  SceneSegLite.yaml  auto_speed.yaml
Models/data_utils/: README.md  augmentations.py  autospeed_performance_metric.py  check_data.py  load_data_auto_steer.py  load_data_ego_lanes.py  load_data_steering_network.py
Models/exports/: benchmark_qat_model.py  convert_pytorch_to_onnx.py
Models/inference/: auto_speed_infer.py  auto_steer_infer.py  ego_lanes_infer.py
Models/model_components/: auto_speed_backbone.py  auto_speed_head.py  auto_speed_layers.py  auto_speed_neck.py  auto_speed_network.py  auto_steer_head.py  auto_steer_network.py  auto_steer_upstream.py  ego_lanes_head.py  ego_lanes_network.py
Models/training/: README.md  auto_speed_trainer.py  auto_steer_trainer.py  ego_lanes.trainer.py  ego_lanes_lite_trainer.py  ego_path_trainer.py  lite_trainer_base.py  scene3d_lite_trainer.py  scene_seg_lite_trainer.py  train_auto_steer.py  train_ego_lanes.py  train_ego_lanes_lite.py  train_ego_path.py  train_scene3d_lite.py  train_scene_seg_lite.py
Modules/ObjectFinder/: README.md
SDV/OpenADKit/: .gitignore  README.md
Tutorials/: README.md
VisionPilot/: .gitignore  README.md  compute_homography.py  test_with_gt.py
VisionPilot/Calibration/: compute_homography.py  test_with_gt.py
VisionPilot/IceOryx2/: frame_node.cpp  inference_node.cpp  transmission_data.hpp  viz_node.cpp
VisionPilot/Middleware_Recipes/: README.md
VisionPilot/ObjectFinder/: generate_homography_correct.py
VisionPilot/Production_Releases/: README.md
VisionPilot/Production_Releases/0.5/: CMakeLists.txt  README.md  VisionPilot.conf.example  main.cpp  run_final.sh  visionpilot.conf
VisionPilot/Production_Releases/0.5/config/: config.example.properties
VisionPilot/Production_Releases/0.5/include/config/: config_reader.hpp
VisionPilot/Production_Releases/0.5/include/drivers/: can_interface.hpp
VisionPilot/Production_Releases/0.5/include/inference/: autosteer_engine.hpp  onnxruntime_engine.hpp  onnxruntime_session.hpp
VisionPilot/Production_Releases/0.5/include/lane_filtering/: lane_filter.hpp
VisionPilot/Production_Releases/0.5/include/lane_tracking/: lane_tracking.hpp
VisionPilot/Production_Releases/0.5/include/path_planning/: path_finder.hpp  path_planner.hpp  poly_fit.hpp
VisionPilot/Production_Releases/0.5/include/rerun/: rerun_logger.hpp
VisionPilot/Production_Releases/0.5/include/steering_control/: steering_controller.hpp  steering_filter.hpp
VisionPilot/Production_Releases/0.5/include/visualization/: draw_lanes.hpp
VisionPilot/Production_Releases/0.5/scripts/: VisionPilot_0.5.py  find_homography.py  inference.py
VisionPilot/Production_Releases/0.5/src/config/: config_reader.cpp
VisionPilot/Production_Releases/0.5/src/drivers/: can_interface.cpp
VisionPilot/Production_Releases/0.5/src/inference/: autosteer_engine.cpp  onnxruntime_engine.cpp  onnxruntime_session.cpp  onnxruntime_session.hpp
VisionPilot/Production_Releases/0.5/src/lane_filtering/: lane_filter.cpp
VisionPilot/Production_Releases/0.5/src/lane_tracking/: lane_tracking.cpp
VisionPilot/Production_Releases/0.5/src/path_planning/: path_finder.cpp  path_planner.cpp  poly_fit.cpp
VisionPilot/Production_Releases/0.5/src/rerun/: rerun_logger.cpp
VisionPilot/Production_Releases/0.5/src/steering_control/: steering_controller.cpp  steering_filter.cpp
VisionPilot/Production_Releases/0.5/src/visualization/: draw_lanes.cpp  draw_lanes.hpp
VisionPilot/Production_Releases/0.5/test/: test_autosteer.cpp
VisionPilot/ROS2/: .gitignore  README.md
VisionPilot/ROS2/pure_pursuit/: CMakeLists.txt  README.md  package.xml
VisionPilot/ROS2/pure_pursuit/include/: pure_pursuit_node.hpp
VisionPilot/ROS2/pure_pursuit/launch/: steering_controller_launch.py
VisionPilot/ROS2/pure_pursuit/src/: pure_pursuit_node.cpp
VisionPilot/Zenoh/: .gitignore  README.md  justfile
VisionPilot/Zenoh/models/: CMakeLists.txt  README.md  run_model.cpp  video_visualization.cpp
VisionPilot/common/: README.md
Visualization/: .gitignore  CMakeLists.txt  README.md
Visualization/src/: main.cpp  window.cpp  window.h
Visualization/src/io/: openlane_loader.cpp  openlane_loader.h
Visualization/src/visualization/: annotation_visualizer.cpp  annotation_visualizer.h
evals/depth/: eval.py
evals/lane_detection/: eval.py  eval_singleimage.py
evals/object_detection/: eval.py  eval_singleimage.py  eval_yolo.py
evals/segmentation/: eval.py  eval_ops.py  eval_singleimage.py
evals/utils/: helpers.py  trt_engine.py
network/: requirements.txt
network/awf/: auto_speed_backbone.py  auto_speed_head.py  auto_speed_neck.py  auto_speed_network.py  backbone.py  depth_context.py  domain_seg_network.py  ego_lanes_network.py  scene_3d_network.py  scene_context.py  scene_neck.py  scene_seg_head.py  scene_seg_network.py
network/data_utils/: load_data_ego_path.py
network/inference/: scene_3d_infer.py  scene_seg_infer.py
network/smp/: DeepLabv3Plus.py  UnetPlusPlus.py
utils/: calculate_weights.py  loss.py  training.py
utils/weights/: GLOBAL_class_weights.txt  bdd100k_weights.txt  cityscapes_weights.txt  combine_weights.py  global_weights.txt
utils/weights_acdc_map_muses_idda/: ACDC_weights.txt  class_weights_report.txt  global_weights.txt  idda_weights.txt  mapillary_weights.txt  muses_weights.txt
(+321 files in other folders)
